1.5.10.1/_sources/Reference/NodeReference/GafferDelight/DelightOptions.md.txt
DelightOptions
==============

Sets global scene options applicable to the 3Delight
renderer. Use the StandardOptions node to set
global options applicable to all renderers.

user
----

Container for user-defined plugs. Nodes
should never make their own plugs here,
so users are free to do as they wish.

out
---

The processed output scene.

enabled
-------

The on/off state of the node. When it is off, the node outputs the input scene unchanged.

in
--

The input scene

options
-------

The options to be applied - arbitrary numbers of user defined options may be added
as children of this plug via the user interface, or using the CompoundDataPlug API via
python.

options.bucketOrder
-------------------

The order that the buckets (image tiles) are rendered in.

options.numberOfThreads
-----------------------

The number of threads used for rendering.

- The default value of 0 lets the renderer choose
  an optimal number of threads based on the available
  hardware.
- Positive values directly set the number of threads.
- Negative values can be used to reserve some cores
  while otherwise letting the renderer choose the
  optimal number of threads.

options.renderAtLowPriority
---------------------------

Causes 3Delight to render at a lower thread priority. This
can make other applications running at the same time more
responsive.

options.oversampling
--------------------

The number of camera rays to fire for each pixel of
the image. Higher values may be needed to resolve fine
geometric detail such as hair, or to reduce noise in
heavily motion blurred renders.

options.shadingSamples
----------------------

The number of samples to take when evaluating shading.
This is the primary means of improving image quality and
reducing shading noise.

options.volumeSamples
---------------------

The number of samples to take when evaluating volumes.

options.clampIndirect
---------------------

The maximum value to clamp indirect light rays to.

options.importanceSampleFilter
------------------------------

Use filter importance sampling (on) or splatting (off)
for sample filtering.

options.showDisplacement
------------------------

Enables or disables displacement in the entire scene.

options.showSubsurface
----------------------

Enables or disables subsurface shading in the entire scene.

options.showAtmosphere
----------------------

Enables or disables atmosphere shading in the entire scene.

options.showMultipleScattering
------------------------------

Enables or disables multiple scattering shading in the entire scene.

options.showProgress
--------------------

Causes the percentage of pixels rendered to be output
during rendering.

options.statisticsFileName
--------------------------

The path to the file where render statistics will be written.
Using an empty value will output statistics to the terminal.
A value of "null" will disable statistics output.

options.maximumRayDepthDiffuse
------------------------------

The maximum bounce depth a diffuse ray can reach. A depth
of 1 specifies one additional bounce compared to purely
local illumination.

options.maximumRayDepthHair
---------------------------

The maximum bounce depth a hair ray can reach. Note that hair
is akin to volumetric primitives and might need elevated ray
depth to properly capture the illumination.

options.maximumRayDepthReflection
---------------------------------

The maximum bounce depth a reflection ray can reach. Setting
the reflection depth to 0 will only compute local illumination
meaning that only emissive surfaces will appear in the reflections.

options.maximumRayDepthRefraction
---------------------------------

The maximum bounce depth a refraction ray can reach. A value of 4
allows light to shine through a properly modeled object such as a
glass.

options.maximumRayDepthVolume
-----------------------------

The maximum bounce depth a volume ray can reach.

options.maximumRayLengthDiffuse
-------------------------------

The maximum distance a ray emitted from a diffuse material
can travel. Using a relatively low value may improve performance
without significant image effects by limiting the effect of global
illumination. Setting it to a negative value disables the limit.

options.maximumRayLengthHair
----------------------------

The maximum distance a ray emitted from a hair shader can travel.
Setting it to a negative value disables the limit.

options.maximumRayLengthReflection
----------------------------------

The maximum distance a reflection ray can travel.
Setting it to a negative value disables the limit.

options.maximumRayLengthRefraction
----------------------------------

The maximum distance a refraction ray can travel.
Setting it to a negative value disables the limit.

options.maximumRayLengthSpecular
--------------------------------

The maximum distance a specular ray can travel.
Setting it to a negative value disables the limit.

options.maximumRayLengthVolume
------------------------------

The maximum distance a volume ray can travel.
Setting it to a negative value disables the limit.

options.textureMemory
---------------------

The amount of RAM allocated to caching textures. Specified
in megabytes.

options.networkCacheSize
------------------------

The amount of disk spaced used to cache network files on
local storage. Specified in gigabytes.

options.networkCacheDirectory
-----------------------------

The local directory used for caching network files.

options.licenseServer
---------------------

The hostname or IP address of the 3Delight license server.

options.licenseWait
-------------------

Causes 3Delight to wait for a license to become available.
When off, 3Delight will exit immediately if no license is
available.

extraOptions
------------

An additional set of options to be added. Arbitrary numbers
of options may be specified within a single `IECore.CompoundObject`,
where each key/value pair in the object defines an option.
This is convenient when using an expression to define the options
and the option count might be dynamic. It can also be used to
create options whose type cannot be handled by the `options`
CompoundDataPlug.

If the same option is defined by both the `options` and the
`extraOptions` plugs, then the value from the `extraOptions`
is taken.